<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guide_page">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="107dp"
        android:layout_height="36dp"
        android:layout_marginLeft="140dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="104dp"
        android:text="@string/daohangyemian"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="导航页面" />

    <Button
        android:id="@+id/button2"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:onClick="beiwang"
        android:text="@string/beiwanglu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="备忘·记录" />

    <Button
        android:id="@+id/button3"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:onClick="calendar"
        android:text="@string/rili"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:text="生日·日历" />

    <Button
        android:id="@+id/button4"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:onClick="fanqie"
        android:text="@string/fanqie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:text="番茄·计时" />

    <Button
        android:id="@+id/button5"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:onClick="zhangben"
        android:text="@string/jizhang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:text="记账·助手" />

    <Button
        android:id="@+id/button6"
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:onClick="course"
        android:text="@string/course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</android.support.constraint.ConstraintLayout>